[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Garage"
version = "0.1.0"
description = "A Python project for managing a garage"
authors = [
    {name = "Mark Kockerbeck", email = "mark@kockerbeck.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/xeb/garage"
"Bug Tracker" = "https://github.com/xeb/garage/issues"

[tool.setuptools]
packages = ["garage"]

[project.scripts]
garage-cli = "garage.cli:main"
